--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,13 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#673AB7</color>
+    <color name="theme_primary_dark">#512DA8</color>
+    <color name="theme_primary_light">#D1C4E9</color>
+    <color name="theme_accent">#009688</color>
+    <color name="theme_primary_text">#212121</color>
+    <color name="theme_secondary_text">#757575</color>
+    <color name="theme_icons">#FFFFFF</color>
+    <color name="theme_divider">#BDBDBD</color>
     <color name="ltgray">#ffe0e0e0</color>
 </resources>
