--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -1,4 +1,5 @@
-<com.example.xyzreader.ui.DrawInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.xyzreader.ui.DrawInsetsFrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/draw_insets_frame_layout"
     android:layout_width="match_parent"
@@ -17,16 +18,20 @@
                 android:id="@+id/photo_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/theme_primary_light"
-                android:padding="0dp">
+                android:padding="0dp"
+                android:background="@color/theme_primary_light">
                 <!--suppress AndroidLintContentDescription -->
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="fill_parent"
                     android:layout_height="@dimen/detail_card_top_margin"
                     android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:transitionName="main_image"
                     />
+
             </FrameLayout>
+
 
             <com.example.xyzreader.ui.MaxWidthLinearLayout
                 android:orientation="vertical"
@@ -67,10 +72,10 @@
                         android:id="@+id/article_byline"
                         style="?android:attr/textAppearanceSmall"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/cardview_shadow_end_color"
                         android:layout_gravity="start"
-                        android:textSize="16sp"/>
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textColor="@color/cardview_shadow_end_color" />
                 </LinearLayout>
 
                 <TextView
@@ -83,15 +88,15 @@
                     android:textColor="@color/theme_primary_text"
                     android:textColorLink="@color/theme_primary_dark"
                     android:textSize="@dimen/detail_body_text_size"
-                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                     android:fontFamily="sans-serif-condensed"
-                    />
+                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
             </com.example.xyzreader.ui.MaxWidthLinearLayout>
         </FrameLayout>
     </com.example.xyzreader.ui.ObservableScrollView>
 
-    <ImageButton android:id="@+id/share_fab"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/share_fab"
         android:stateListAnimator="@anim/fab_state_list_anim"
         android:background="@drawable/add_fab_background"
         android:layout_gravity="bottom|end"
@@ -100,7 +105,7 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:src="@drawable/ic_share"
-        android:elevation="@dimen/fab_elevation"
+        android:elevation="6dp"
         android:contentDescription="@string/action_share" />
 
 </com.example.xyzreader.ui.DrawInsetsFrameLayout>
